--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss-cli": "^10.1.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-animated": "^1.0.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
