--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss-cli": "^10.1.0",
     "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.1",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animated": "^1.0.1",
     "typescript": "^5.0.2",
