--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "tailwindcss": "^3.3.2",
     "tailwindcss-animated": "^1.0.1",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-svgr": "^3.2.0"
   }
 }
